--- a/web/server_management_app/static/styles.css
+++ b/web/server_management_app/static/styles.css
@@ -51,7 +51,7 @@ button[type="button"] {
     border: none;
     border-radius: 5px;
     margin-left: 5px;
-    margin-bottom: 15px;
+    /* margin-bottom: 15px; */
     font-family: 'Martian Mono', monospace;
     padding: 10px;
     color: white;
@@ -62,6 +62,37 @@ button[type="button"]:hover {
     background-color: #45a049;
 }
 
+button.delete {
+    background-color: #af4c4c;
+    text-align: left;
+    color: white;
+}
+
+button.delete:hover {
+    background-color: #a53e3e;
+}
+
+button.delete a {
+    color: inherit;
+    /* Ensure the link color inherits from the button */
+    text-decoration: none;
+    display: block;
+    width: 100%;
+    height: 100%;
+    /* Make sure the link covers the entire button area */
+}
+
+td button.delete {
+    background-color: #af4c4c;
+    text-align: left;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 10px;
+    cursor: pointer;
+    margin-bottom: 0px;
+    font-family: 'Martian Mono', monospace;
+}
 
 /* todo_list template */
 table {
